# otus-cpp-pro-ls005

./: CMakeLists.txt  README.md  clang-tidy
.github/workflows/: release.yml
include/mvc/: CMakeLists.txt  Controller.cpp  Controller.hpp  IController.hpp  IModel.hpp  IView.hpp  Model.cpp  Model.hpp  View.cpp  View.hpp
include/version/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
tests/: gtests_version.cpp
